<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activitySubject"
            android:id="@+id/lblNewSubject" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requiredField"
            android:id="@+id/requiredSubject"
            android:textColor="#ffff0000"
            android:visibility="invisible" />
    </LinearLayout>

    <EditText
        android:id="@+id/editSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editboxSubject"
        android:padding="10dp"
        android:autoText="false"
        android:enabled="true"
        android:maxLines="1"
        android:background="#00688B"
        style="@style/AppTheme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/activityVenue"
        android:id="@+id/activityVenue" />

    <EditText
        android:id="@+id/editActivityVenue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editboxVenue"
        android:padding="10dp"
        android:autoText="false"
        android:enabled="true"
        android:maxLines="1"
        android:background="#00688B"
        style="@style/AppTheme" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activityStartTime"
            android:id="@+id/textView"
            android:layout_gravity="left|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activityDuration"
            android:id="@+id/lblNewduration"
            android:layout_gravity="right|top"
            android:layout_marginRight="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="350dp">

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/duration" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:id="@+id/lblMinutesInfo"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="#00688B"
                    android:textSize="29sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requiredDuration"
                    android:id="@+id/requiredDuration"
                    android:textColor="#ffff0000"
                    android:visibility="invisible"
                    android:layout_gravity="left|bottom" />
            </FrameLayout>

        </LinearLayout>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startTime"
            android:layout_gravity="left|top"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp" />

    </FrameLayout>

    EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
