<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="roger.bookingsystem.DefaultView"
    android:padding="8dp"
    android:background="@drawable/default_view_background">

    <TextView
        android:id="@+id/fullscreen_context_default"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_gravity="center"
        android:autoText="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/background_Default"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal|top"
            android:background="@drawable/top_layout_border"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:id="@+id/topFrame_Default">

            <FrameLayout
                android:layout_width="241dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/up_logo"
                android:id="@+id/mwrLogo"
                android:layout_marginRight="55dp" />

            <FrameLayout
                android:layout_width="569dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:id="@+id/appNameFrame_Default">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/system_name"
                    android:id="@+id/lblNameOfSystem"
                    android:layout_gravity="center"
                    android:textColor="#ff5d676d"
                    android:textIsSelectable="false"
                    android:textSize="60sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </FrameLayout>
        </FrameLayout>

        <Button
            style="?metaButtonBarButtonStyle"
            android:id="@+id/btn_QuickBook"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/quick_Book"
            android:background="@drawable/bottom_layout_border"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#00688B"
            android:textAlignment="center"
            android:layout_gravity="left|bottom"
            android:onClick="newActivityFunction" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginTop="85dp"
            android:background="@drawable/contents_layout_border"
            android:layout_marginBottom="75dp"
            android:paddingBottom="10dp"
            android:id="@+id/contentsFrame_Default">

            <FrameLayout
                android:layout_width="353dp"
                android:layout_height="fill_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/status_border_green"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/statusBlock"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp">

                <TextClock
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clockDate"
                    android:layout_gravity="center_horizontal|bottom"
                    android:textSize="50sp"
                    android:textColor="#ff364147"
                    android:layout_marginBottom="40dp"
                    android:elegantTextHeight="false"
                    android:format12Hour="dd MMM yyyy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/lblStatus"
                    android:layout_gravity="center_horizontal|top"
                    android:textColor="#ff364147"
                    android:textSize="60sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="40dp" />

                <TextClock
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clockTime"
                    android:layout_gravity="center"
                    android:textSize="50sp"
                    android:textColor="#ff364147"
                    android:elegantTextHeight="false"
                    android:format12Hour="HH:mm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minutesTill"
                    android:layout_gravity="center_horizontal|top"
                    android:textColor="#ff364147"
                    android:textSize="35sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:visibility="invisible"
                    android:text="@string/next_activity" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="585dp"
                android:layout_height="match_parent"
                android:focusable="false"
                android:id="@+id/roomMeetingsFrame">

                <ListView
                    tools:listitem="@android:layout/simple_expandable_list_item_2"
                    android:layout_width="572dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/lstActivities"
                    android:layout_gravity="left|center_vertical"
                    android:choiceMode="none"
                    android:layout_marginTop="58dp"
                    android:textAlignment="center"
                    android:scrollingCache="false"
                    android:nestedScrollingEnabled="false"
                    android:textFilterEnabled="false"
                    android:theme="@style/listStyle"
                    android:numColumns="2"
                    android:dividerHeight="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawSelectorOnTop="false"
                    android:footerDividersEnabled="false"
                    android:layout_marginBottom="20dp"
                    android:fastScrollAlwaysVisible="false"
                    android:background="@drawable/border_activities"
                    android:clickable="false"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="left|top"
                    android:background="@drawable/border_activity_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/roomNameFrame"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/tempRoomHolder"
                        android:id="@+id/labelRoomName"
                        android:layout_gravity="center"
                        android:layout_marginTop="00dp"
                        android:layout_marginLeft="0dp"
                        android:textColor="#ff364147"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="middle" />
                </FrameLayout>
            </FrameLayout>

        </FrameLayout>
    </FrameLayout>
</FrameLayout >
